# VIB

./: .gitignore  .gitmodules  README.md  pyproject.toml  train.py
src/: lightning.py
src/VIB/: __init__.py  vib.py
